[package]
name = "squid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
hyper = { version = "0.14.25", features = [ "full" ] }
hyper-tls = "0.5.0"

tonic = { version = "0.9.1", features = [ "tls", "gzip" ] }
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net" ] }

prost = "0.11.8"
prost-types = "0.11.8"
serde = "1.0.159"
reqwest = "0.11.16"
serde_yaml = "0.9.21"

[build-dependencies]
tonic-build = { version = "0.9.1", features = [ "prost" ] }