[package]
name = "squid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
tonic = { version = "0.9.2", features = [ "tls", "gzip" ] }
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net" ] }

serde = { version = "1.0.160", features = [ "derive" ] }
prost = "0.11.9"
prost-types = "0.11.8"
reqwest = { version = "0.11.16", features = [ "json" ] }
serde_yaml = "0.9.21"
anyhow = "1.0.72"

[build-dependencies]
tonic-build = { version = "0.9.1", features = [ "prost" ] }