[package]
name = "benchmarks"

version.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
squid-tokenizer = { path = "../squid-tokenizer" }

[[bench]]
name = "tokenize"
harness = false
