[package]
name = "squid-db"

version.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
bincode = "1"
serde = { version = "1", features = ["derive"] }
tokio = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tracing = { workspace = true, optional = true }
squid-error = { path = "../squid-error" }

flate2 = { version = "1", optional = true }
crc32fast = { version = "1.4", optional = true }

[features]
compress = ["flate2", "crc32fast"]
logging = ["tracing"]
