[package]
name = "squid"

version.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true

[[example]]
name = "client"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["default"] }
prost = "0.12"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

anyhow = "1"
smallvec = { version = "1", features = ["serde"] }

fern = "0.6"
log = "0.4"

squid-algorithm = { path = "../squid-algorithm" }
squid-db = { path = "../squid-db" }
squid-tokenizer = { path = "../squid-tokenizer" }

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
