[package]
name = "squid"

version.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true

[[example]]
name = "leaderboard"

[[example]]
name = "set"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["default"] }
prost = "0.12"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = "0.3"
ctrlc = "3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
regex-lite = "0.1"
lazy_static = "1"

squid-algorithm = { path = "../squid-algorithm" }
squid-db = { path = "../squid-db", features = ["logging"] }
squid-tokenizer = { path = "../squid-tokenizer" }

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
